# susi-lib

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pypi_upload.yml  test.yml
susi_lib/: __init__.py  finder.py  regex.py
susi_lib/functions/: __init__.py  functions.py
susi_lib/test/: test_braille.py  test_finder.py  test_functions.py  test_morse.py  test_number_systems.py  test_regex.py  test_semaphore.py  test_symbols.py
susi_lib/types/: __init__.py  braille.py  flag.py  morse.py  morsesymbol.py  number_systems.py  semaphore.py  seven_segment.py  symbol.py  symbols.py
susi_lib/types/tests/: braille_tests.py  morse_tests.py  number_systems_test.py  semaphore_tests.py  symbols_tests.py
susi_lib/utils/: __init__.py  export.py
tests/: lorem.txt  test_finder.py  test_regex.py
