[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "susi-lib"
version = "1.0.1"
authors = [
  { name="Oliver Lago", email="oliver.oli.lago@gmail.com" },
]
description = "Library for SuŠi organizers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/olilag/susi-lib"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/susi_lib"]
